Version 1.1.0-CVS (?? ??? 2006)
 - Implemented PATCH 1442317: view_entry.php: Disable $proxy_fullname for LDAP users
 - Fixed bug 1366002: No 'all day' event with manual repeat at either DST change
 - Implemented Feature Request1440366: Add a none option to Category Icons
 - Implemented PATCH 1440975: Use category name as title for category icons
 - Fixed bug 1434525: rss.php shows some events twice Second Pass
 - Fixed bug 1439655: cannot save permissions of public access using UAC
 - Fixed bug 1438954: "Top menu" not working on view_entry.php
 - Fixed bug 1438952: Description & Site Extras not showing in pop-ups - CVS
 - Fixed bug 1416408: installation-wizard hang-up
 - Added updated UAC controls. This requires a databse change. Users can now
   grant permission to their own calendars.
 - Fixed bug 1435533: No headers if $LANGUAGE empty
 - Fixed bug 1435460: Extra '.txt' in includes/translate.php
 - Fixed bug 1435576: Duplicate selectors, almost, in styles.php
 - Fixed bug 1435793: Bug in admin.php
 - Fixed bug 1420372: Cannot add event to public calendar
 - Fixed bug 1434525: rss.php shows some events twice
 - Fixed bug 1424599: too many events in rss feed
 - Fixed bug 1433366: no reminders sent for repeated events without an end date
 - Fixed bug 1418124: Ending of recurrence: Fields not editable
 - Fixed bug 1430285: edit an event & time wrong
 - Fixed bug 1430670: Undefined Index in functions.php
 - Fixed bug 1430755: Lunar phases mssing when display all days selected
 - Fixed bug 1430562: translation-file cannot be updated properly
 - Fixed bug 1427479: Repated overlapping event (=2 days) will not be displayed
 - Fixed bug 1340790: Return to proper view after edit or other action
 - Fixed bug 1409552: Weekly repeating event shifts days
 - Fixed bug 1424413: calling upcoming.php as include doesn't work after 02/03/06
 - Moved all common images into images folder
 - Added optional lunar phases to month.php